--- a/HTML/input.html
+++ b/HTML/input.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <title>Form - Input</title>
   <link rel="stylesheet" href="https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     
