--- a/HTML/logo-header.html
+++ b/HTML/logo-header.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logo in Header</title>
-    <link rel="stylesheet" href="./logo-header.css">
+    <link rel="stylesheet" href="../css/logo-header.css">
 </head>
 <body> 
     <div class="header">
         <h1>
-            <a href="#"></a>
-                <img src="https://statics.goorm.io/logo/edu/goorm_edu.svg" alt="Goorm Edu">
+            <a href="#">
+                <img src="https://statics.goorm.io/logo/edu/goorm_edu.svg" alt="goorm_edu">
             </a>
         </h1>
         <a href="https://edu.goorm.io/qna">Q&amp;A</a>
