--- a/HTML/markeup3.html
+++ b/HTML/markeup3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feature-box</title>
-    <link rel="stylesheet" href="./markup3style.css">
+    <link rel="stylesheet" href="../css/markup3style.css">
 </head>
 <body>
     <div class="feature-box no-image">
