--- a/HTML/markup1.html
+++ b/HTML/markup1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ad banner</title>
-    <link rel="stylesheet" href="./markup1style.css">
+    <link rel="stylesheet" href="../css/markup1style.css">
 </head>
 <body>
     <div class="modal">
