--- a/HTML/Radio&CheckBox.html
+++ b/HTML/Radio&CheckBox.html
@@ -1,4 +1,4 @@
-<form action="" method="GET">
+<form action="" method="POST">
     <label for="math">수학</label>
     <input type="radio" name="Subject" value="0" id="math"/>
     <label for="Eng">영어</label>
@@ -14,7 +14,7 @@
 </form>
 
 
-<form action="" method="GET">
+<form action="" method="POST">
     <label for="html">HTML</label>
     <input type="checkbox" name="Subject" value="HTML" id="html">
     <label for="css">CSS</label>
