--- a/HTML/GithubDropDownMenu.html
+++ b/HTML/GithubDropDownMenu.html
@@ -51,6 +51,7 @@
             </ul>
         </div>
     </div>
+    <!-- JavaScript를 배우고 다르게 바꿔보기 -->
     <script src="../js/GithubDropDownMenu.js"></script>
 </body>
 </html>
