--- a/HTML/Video.html
+++ b/HTML/Video.html
@@ -21,6 +21,9 @@
             <p>
                 30초만에 압살 실화인가?
             </p>
+            <!-- 통상 .mp4와 .webm 을 많이 사용합니다.
+
+초창기 HTML5 가 도입되었을 때 각각 지원하는 포맷이 달라 여러개를 사용했으나 지금은 구형 브라우저(예: IE)를 제외한 대부분의 브라우저에서 .mp4와 .webm을 지원하므로 위 두가지 포맷위주로 사용하시면 될것 같습니다. -->
         </div>
     </div>
 </body>
