--- a/bugless-CSS/Position-1/index.html
+++ b/bugless-CSS/Position-1/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="user-card">
       <div class="user-photo">
-        <img src="../../assets/position-user.jpg" alt="star" />
+        <img src="../../assets/user.jpg" alt="star" />
         <span class="user-status" aria-label="Active"></span>
       </div>
       <h1 class="user-name">
